--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.3",
+    "@apollo/client": "^3.9.6",
+    "apollo-link-context": "^1.0.20",
+    "formik": "^2.4.5",
+    "graphql": "^16.8.1",
+    "next": "^12.3.4",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-select": "^5.8.0",
+    "recharts": "^2.12.3",
+    "sweetalert2": "^11.10.6",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.18",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.3"
+    "eslint-config-next": "14.1.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
